Fix layout breaking on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,10 +6,14 @@ body {
 
 .site-content {
     flex: 1;
-    max-width: 600px;   // Minima theme (in poole, 45rem is used)
+    max-width: var(--content-max-width);
     padding: 0 var(--content-padding);
     margin: 0 auto;
 }
+@media (max-width: 500px) {     // CAN'T USE CSS VARIABLE HERE: --content-max-width
+    .site-content {margin: 0;}  // Fixing overflows on small screens
+}
+
 
 /* 
     Header stuff 
@@ -85,7 +89,7 @@ body {
     Article
 */
 article {
-    margin: 4rem 0;
+    margin: 1rem 0 4rem 0
 }
 
 article h1 {
@@ -109,10 +113,40 @@ article time {
 /*
     Project
 */
-.project p {
+.project-tile p {
     color: var(--primary-30);
 }
 
+.project > h1 {
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+}
+
+.project > h2 {
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+}
+
+hr {
+    background-color: var(--primary-30);
+}
+
+/*
+    Gallery
+*/
+.project-gallery {
+    // CSS GRID STUFF
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-gap: 1rem;
+}
+
+.project-gallery img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
 
 /*
     Blog
