--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,6 +1,6 @@
 
 body {
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 400;
   line-height: 1.75;
 }
@@ -12,11 +12,15 @@ h1, h2, h3, h4, h5 {
 }
 
 /* https://type-scale.com/, major third scale (1.200)  */
-h1 {font-size: 1.728rem;}
-h2 {font-size: 1.44rem;}
-h3 {font-size: 1.2rem;}
-h4 {font-size: 1rem;}
+h1 {font-size: 2.074rem;}
+h2 {font-size: 1.728rem;}
+h3 {font-size: 1.44rem;}
+h4 {font-size: 1.2rem;}
 small, .text_small {font-size: 0.833rem;}
+
+p {
+    text-align: justify;
+}
 
 /* 
     Header stuff 
@@ -37,6 +41,19 @@ small, .text_small {font-size: 0.833rem;}
     font-size: 1rem;
 }
 
+
+
+/*
+    Project layout
+*/
+.project > h1 {
+    font-size: 2.488rem;
+    text-align: center;
+}
+.project > h2 {
+    font-size: 1rem;
+    font-weight: bold;
+}
 
 
 /*
