--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,7 @@
 :root {
     --header-height: 100px;
     --content-padding: 1.2rem;
+    --content-max-width: 500px;  // approx. 65 characters   
 
     --primary: #001824;
     --accent: #e4b062;
